# IKEA-Smart-Home

./: .env  .gitignore  Cargo.toml  README.md  example_sync.py  generate_tradfri_conf.py  handler.py  requirements.txt  server.py  start.sh  test.py  tradfri_standalone_psk.conf  tradfri_standalone_psk2.conf  tradfri_standalone_psk3.conf  tradfri_standalone_psk4.conf
app/: __init__.py  routes.py
app/api/: __init__.py  device.py
app/public/static/: index.html  main.js
iot_server/: .env  .eslintrc.json  Cargo.toml  package-lock.json  package.json  tsconfig.json
iot_server/public/style/css/: index.css  index.css.map
iot_server/public/style/scss/: index.scss
iot_server/src/: Server.ts  error.rs  handlers.rs  index.ts  init.ts  iot_handler.rs  main.rs  urls.rs
iot_server/src/entities/: Command.ts  index.ts
iot_server/src/public/: index.html  main.css
iot_server/src/public/js/: index.js
iot_server/src/public/style/.sass-cache/889681efd18bd448f586b3e58fc98a67943d6f44/: index.scssc
iot_server/src/routes/: devices.ts  index.ts  lights.ts
iot_server/src/shared/: Logger.ts  globals.ts  index.ts
release/: server_service.service
release/static/: main.js
static/: index.html
