[package]
name = "iot_server"
version = "0.1.0"
authors = ["realSuffix <linmad17@htl-kaindorf.at>", "TheCrether <thecrether@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.44"
lazy_static = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
derive_more = "0.99.2"

actix-service = "1.0.5"
actix-files = "0.2.1"
actix = "0.9.0"
actix-web-actors = "2.0.0"
actix-cors = "0.2.0"
actix-rt = "1.0.0"
actix-web = { version="2.0.0", features=["openssl"] }